--- a/style.css
+++ b/style.css
@@ -1,291 +1,439 @@
 *{
-  margin:0;
   padding:0;
+  margin:0;
   box-sizing:border-box;
 }
 
 body{
-  width:100%;
-  /* height:100vh; */ 
-  /* display:flex; */
-  /* flex-direction:column; */
-  background:linear-gradient(180deg, #FFFFFF 0%, #F0F1FF 100%);
-  overflow-x: hidden;
-} 
-
-header{
-  padding:16px;
-  display:flex;
-  justify-content:space-between;
-  background:white;
+  width:100;
+  background: #FCFAF9;
 }
-
-.header-h2{
-  border-radius: 28px;
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 28px;
-  line-height: 35px;
-  color: #13183F;
-}
-
-.header-button{
-  background: #13183F;
-  border-radius: 28px;
-  width:140px;
-  height:48px;
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 28px;
-  color: #FFFFFF;
-  border:none;
-}
-
-.budget-h1{
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 40px;
-  line-height: 50px;
-  color: #13183F;
- }
-
- .budget-p{
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-  color: #83869A;
- }
-
- .budget-button{
-  background: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
-  border-radius: 31.5px;
-  border:none;
-  width:167px;
-  height:56px;
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 26px;
-  color: #FFFFFF;
- }
-
- .profile-picture{
-  display:flex;
-  justify-content:center;
- }
-
- .tablet-image{
-  display:none;
- }
-
-
- .section-h5{
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 24px;
-  line-height: 32px;
-  color: #FFFFFF;
-  width:286px;
-  height:64px;
-  padding:24px 28px 32px 28px;
- }
-
- h3{
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 25px;
-  color: #13183F;
- }
-
- .card-p{
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-  color: #83869A;
- }
-
- .card-button{
-  font-family: 'Plus Jakarta Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 28px;
-  border:none;
-  color: #F74780;
-  background:white;
-  width:120px;
-  height:28px;
- }
-
 
 
 main{
   padding:16px;
-  background: linear-gradient(180deg, #FFFFFF 0%, #F0F1FF 100%);
 }
 
-footer{
-  background: #13183F;
-  margin-top:80px;
-  height:120px;
+.modernconteiner{
   display:flex;
-  justify-content:space-between;
-  padding:0 16px;
+  flex-direction:column;
+  gap:32px;
 }
 
-.footer-h4{
-  font-family: 'Plus Jakarta Sans';
+.title{
+  width:280px;
+  font-family: 'Big Shoulders Display';
   font-style: normal;
-  font-weight: 800;
-  font-size: 28px;
-  line-height: 35px;
-  color: #FFFf;
-  margin-top:43px;
- 
+  font-weight: 900;
+  font-size: 60px;
+  line-height: 55px;
+  text-transform: uppercase;
+  color: #151515; 
 }
 
-.footer-button{
-  border:none;
-  background: linear-gradient(180deg, #4851FF 0%, #F02AA6 100%);
-  border-radius: 28px;
-  width:140px;
-  height:48px;
-  font-family: 'Plus Jakarta Sans';
+.title-p{
+  width:339px;
+  font-family: 'Outfit';
   font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 28px;
+  color: #444444;
+}
+
+
+.yourdayconteiner{
+  margin-top:120px;
+}
+
+.yourday-h{
+  margin-top:25px;
+  font-family: 'Big Shoulders Display';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 50px;
+  line-height: 45px; 
+  text-transform: uppercase;
+  color: #151515;
+}
+
+.yourday-h2{
+  width:300px;
+  font-family: 'Big Shoulders Display';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 50px;
+  line-height: 45px; 
+  text-transform: uppercase;
+  color: #151515;
+}
+
+.yourday-p{
+  margin-top:21px;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 28px;
+  color: #444444; 
+}
+
+.photo-1{
+  margin-top:32px;
+}
+
+.photo-2{
+  margin-top:14px;
+}
+
+.black-div{
+  padding:24px;
+  margin-top:14px;
+  height:293px;
+  width:343px;
+  background:black;
+  color:white;
+}
+
+.blackdiv-h{
+  margin-top:25px;
+  font-family: 'Big Shoulders Display';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 50px;
+  line-height: 45px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.blackdiv-p{
+  margin-top:24px;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
   line-height: 28px;
   color: #FFFFFF;
-  margin-top:36px;
 }
 
 
-.budget{
+
+
+.black-button{
+  height:72px;
+  width:204px;
+  background: #151515;
+  border:none;
+  margin:0;
+  border:0;
+  outline:0;
+
+}
+
+.button-conteiner{
   display:flex;
-  flex-direction:column;
-  gap:25px;
 }
 
-.card-conteiner{
+
+.black-button a {
+  text-decoration:none ;
+  font-family: 'Big Shoulders Display';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 3.63636px;
+  color: #FFFFFF;
+}
+
+.gold-button{
+  width:56px;
+  height:72px;
+  background: #D5966C;
+  border:none;
   display:flex;
-  flex-direction:column;
-  gap:50px;
+  justify-content:center;
+}
+.gold-button img{
+  width:8px;
 }
 
-.card-header{
-  height:120px;
+.yourday-h{
+  font-family: 'Big Shoulders Display';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 50px;
+  line-height: 45px;
+  text-transform: uppercase;
+  color: #151515;
+}
+
+
+footer{
+  height:336px;
+  margin-top:100px;
+  padding:32px;
+  background:black;
   width:100%;
-  background: linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
-  border-radius: 10px;
-  margin-bottom:40px;
+  color:white;
 }
 
-.card{
-  background: #FFFFFF;
-  padding:0px 28px 32px 28px;
-  display:flex;
-  flex-direction:column;
-  gap:20px;
+.footer-h{
+  margin-top:10px;
+  width:50px;
+  font-family: 'Big Shoulders Display';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 20px;
+  text-transform: uppercase;
+  color:white;
 }
-.card-text-conteiner{
-  display:flex;
-  flex-direction:column;
-  gap:20px;
+
+
+
+.footer-p{
+  width:310px;
+  margin-top:38px;
+  font-family: 'Outfit';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FFFFFF;
+}
+
+.footerdiv{
+  margin-top:40px;
 }
 
 svg{
-   margin-top:-28px;
+  margin-right:15px;
+}
+
+.tabletimg{
+  display:none;
 }
 
 /* tablet version */
-@media screen and (min-width:768px) {
-  .budget{
-    width:398px;
-  }
-
-  .mobile-image{
+@media screen and (min-width:768px){
+   
+  .mobileimg{
     display:none;
   }
 
-  .tablet-image{
-    display:block;
+  .tabletimg{
+    display: block;
+  }
+
+  .modernconteiner{
     position:absolute;
-    top:-70px;;
-    right:-300px;
+    top:100px;
+    left:397px;
+    width:339px;
   }
 
-  .card-conteiner{
-    margin-top:210px;
+  .yourdayconteiner{
     display:flex;
-    flex-direction: row;
-    flex-wrap:wrap;
-    justify-content:center;
-
-  }
-  
-  .card{
-    width:340px;
-    height:259px;
+    flex-direction:row-reverse;
+    justify-content: space-between;
   }
 
-  .card-header{
-    width:340px;
-    height:259px;
+  .yourday-p{
+    width:223px;
   }
 
-  .budget{
+  main{
+    padding:0 40px;
+  }
+
+  .yourimage{
+    width:398px;
+    height: 400px;
+  }
+
+  .photo-1{
+    margin-top:0;
+    width:398px;
+    height:720px;
+  }
+
+  .photoconteiner{
+    margin-top:11px;
+    display:flex;
+    gap:11px;
+  }
+
+  .photo-2{
+    margin-top:0;
+    width:280px;
+    height:313px;
+  }
+
+  .black-div{
+    margin-top:0;
+    width:280px;
+    height:396px;
+  }
+
+  .blackdiv-p{
+    width:223px;
+  }
+
+  .blackdiv-h{
     margin-top:60px;
   }
 
-  .section-h5{
-    margin-top:40px;
+  .rightphoto{
+    display:flex;
+    flex-direction: column;
+    gap:11px;
   }
 
-  .header-button{
-    z-index: 1;
+  footer{
+    padding-top:56px;
+    height:216px;
+    display:flex;
+    justify-content: space-between;
   }
-  
+
+  .footer-h2{
+    margin-top:0;
+  }
+
+  .footer-p{
+    width:281px;
+    margin-top:0;
+  }
+
+  .footerdiv{
+    margin-top:0px;
+  }
+
 }
 
 /* desktop version */
 
-@media screen and (min-width:1040px) {
+@media screen and (min-width:1440px) {
+  .tabletimg{
+    padding-left:360px;
+    
+  }
 
-main{
-  padding:0 70px;
-}
 
-.card-conteiner{
-  justify-content:center;
-}
+  .headerdiv{
+    position:absolute;
+    background:black;
+    width:360px;
+    height:700px;
+  }
 
-.tablet-image{
-  right:-250px;
-}
+  .button-p{
+    position:absolute;
+    top:50px;
+    left:348px;
+   
 
-header{
-  padding:20px 70px;
-}
+  }
 
-.header-button:hover{
-  background-color:#666CA3;
-}
+  .title-p{
+    width:290px;
+  }
+  
+  .button-conteiner{
+    margin-top:50px;
+  }
+  
+  main{
+    padding:70px;
+  }
+  .title{
+    background: linear-gradient(to left, black, black 43%, #eee 10%, white 10%);     -webkit-background-clip: text;     -webkit-text-fill-color: transparent;
+    margin-left:-324px;
+    width:500px;
+    font-family: 'Big Shoulders Display';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 96px;
+    line-height: 88px;
+    text-transform: uppercase;
+  }
 
-.budget-button:hover{
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), linear-gradient(180deg, #FF6F48 0%, #F02AA6 100%);
-}
+  .yourday-p{
+    width:290px;
+  }
 
+  .yourimage{
+    margin-right:130px;
+    width:700px;
+    height:400px;
+  }
+
+  .photoconteiner{
+    gap:30px;
+    margin-left:100px;
+    margin-top:30px;
+  }
+
+  .photo-1{
+    width:635px;
+    height:720px;
+  }
+
+  .photo-2{
+    width:445px;
+    height:313px;
+  }
+  .black-div{
+    padding:40px;
+    padding-top:10px;
+    width:445px;
+    height:377px;
+  }
+
+  .blackdiv-h{
+    font-family: 'Big Shoulders Display';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 60px;
+    line-height: 60px;
+    text-transform: uppercase;
+    color: #FFFFFF; 
+  }
+
+  .blackdiv-p{
+   width:350px;
+   font-family: 'Outfit';
+   font-style: normal;
+   font-weight: 300;
+   font-size: 22px;
+   line-height: 32px;
+   color: #FFFFFF;
+  }
+
+  .rightphoto{
+    gap:30px;
+  }
+
+  footer{
+    padding:100px;
+    padding-top:80px;
+    margin-top:20px;
+  }
+
+  .footer-p{
+    width:430px;
+    font-family: 'Outfit';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 28px;
+    color: #FFFFFF;
+    
+  }
+
+  .p-hdiv{
+    margin-left:100px;
+  }
+  
 
 }
